--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Clinic</title>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Homepage for Father</title>
 </head>
 
 <body>
