--- a/client/main.html
+++ b/client/main.html
@@ -11,7 +11,7 @@
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 </head>
 
-<body data-spy="scroll">
+<body data-spy="scroll" data-target="#navBar" data-offset="40">
   <div id='render-target'></div>
 
 </body>
