--- a/client/main.html
+++ b/client/main.html
@@ -1,10 +1,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="강릉 주택 신축 리모델링 수리 현대주택공사">
+  <meta name="author" content="현대주택공사">
 
-  <title>Homepage for Father</title>
+  <title>현대주택공사</title>
 
   <!-- Custom fonts for this template -->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
